# TransferBench

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CMakeLists.txt  EnvVars.hpp  Kernels.hpp  Makefile  README.md  TransferBench  TransferBench.cpp  TransferBench.hpp  example.cfg
.github/: CODEOWNERS  dependabot.yml
docs/: .gitignore  conf.py  index.rst  install.rst  instructions.rst  introduction.rst
docs/.sphinx/: _toc.yml.in  requirements.txt
docs/doxygen/: Doxyfile
docs/examples/: configfile_format.rst  examples.rst  index.rst
docs/how to/: use-transferbench.rst
docs/install/: install.rst
docs/reference/: api.rst
docs/sphinx/: _toc.yml.in  requirements.txt
examples/: all_rdma_connectins_dell.cfg  all_rdma_connections.cfg  example.cfg
src/: Makefile  TransferBench.cpp
src/include/: Compatibility.hpp  EnvVars.hpp  GetClosestNIC.hpp  GetClosestNumaNode.hpp  IBVerbsWrapper.hpp  Kernels.hpp  RdmaTopo.hpp  TransferBench.hpp
